# Aeras

./: .gitignore  README.md  changelog.txt  ros2_launcher.sh
FASTLIOROS2/: CMakeLists.txt
FASTLIOROS2/RMSE_Calc/rosbag2_2024_12_13-21_54_43/: metadata.yaml  rosbag2_2024_12_13-21_54_43_0.db3
FASTLIOROS2/RMSE_Calc/rosbag2_2024_12_13-22_27_26/: metadata.yaml
FASTLIOROS2/RMSE_Calc/rosbag2_2024_12_13-22_51_59/: metadata.yaml
FASTLIOROS2/install/: local_setup.sh  setup.sh  setup.zsh
FASTLIOROS2/install/fast_lio/lib/fast_lio/: fastlio_mapping
FASTLIOROS2/install/fast_lio/share/fast_lio/: package.sh
FASTLIOROS2/install/fast_lio/share/fast_lio/config/: avia.yaml
FASTLIOROS2/src/: laserMapping.cpp
World Generator/: coridor.world  cylinder_coridor.world  terrain_1.tif  trees copy.sdf  z_height.m
aeras/World Generator/: Guide.odt  cylinder_world.py  extractor.world  new.world  python_world.world  python_world_test.world  tree_positions.csv  trees.sdf  world_modifier.py
aeras/src/aeras_core/: new.py  path_follower.py
aeras/src/aeras_core/gtpath_publisher/: setup.py
aeras/src/aeras_core/sjtu_drone_bringup/: setup.py
aeras/src/aeras_core/sjtu_drone_bringup/sjtu_drone_bringup/: yaw_diff_storer.py
aeras/src/aeras_core/sjtu_drone_control/install/: setup.ps1
aeras/src/aeras_core/sjtu_drone_control/sjtu_drone_control/install/: setup.ps1  setup.zsh
aeras/src/aeras_core/sjtu_drone_description/src/: plugin_drone_private.cpp
aeras/src/aeras_core/sjtu_drone_description/worlds/: 100_in_prog6.world  green_playground.world  green_playground4.world  playground.world
aeras/src/localization/FASTLIOROS2/launch/: mapping.launch.py
aeras/src/localization/FASTLIOROS2/log/: latest_build
aeras/src/localization/FASTLIOROS2/rviz/: fastlio.rviz
aeras/src/localization/FASTLIOROS2/src/: preprocess.cpp  preprocess.h
aeras/src/localization/lidarslam_ros2-develop/: frames_2024-12-05_16.21.26.gv  frames_2024-12-05_16.55.23.gv  frames_2024-12-07_14.08.57.gv
aeras/src/localization/lidarslam_ros2-develop/lidarslam/: package.xml
aeras/src/path_planning/apf_local/: CMakeLists.txt
aeras/src/path_planning/apf_local/src/: apf_local_planner.cpp
aeras/src/path_planning/octomap_server2_latest_2/install/: local_setup.sh
aeras/src/path_planning/ompl_example_2d_latest_6/ompl_example_2d/: frames_2025-01-18_15.58.56.gv  frames_2025-01-18_16.00.25.gv  frames_2025-01-18_16.14.09.gv  frames_2025-01-18_19.59.24.gv
aeras/src/perception/Thermal_Node/: humandetection.py  segmentation.py
apf_local/: package.xml
gtpose_publisher/install/: local_setup.sh  setup.sh
gtpose_publisher/install/gtpath_publisher/share/gtpath_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
gtpose_publisher/log/: latest_build
gtpose_publisher/src/gtpath_publisher/: package.xml  setup.cfg
gtpose_publisher/src/gtpath_publisher/gtpath_publisher/: gt_path.py
lidarslam_ros2-develop/: .gitignore  frames_2024-12-05_16.49.56.gv  map.pcd  pose_graph.g2o
lidarslam_ros2-develop/gtpath_publisher/: setup.py
lidarslam_ros2-develop/gtpath_publisher/src/: gt_path.py
lidarslam_ros2-develop/lidarslam/launch/: lidarslam.launch.py
lidarslam_ros2-develop/lidarslam/rviz/: mapping.rviz
lidarslam_ros2-develop/ompl_example_2d_latest_6-20250408T040251Z-001/ompl_example_2d_latest_6/ompl_example_2d/: frames_2025-01-18_15.55.55.gv
lidarslam_ros2-develop/ompl_example_2d_latest_6-20250408T040251Z-001/ompl_example_2d_latest_6/ompl_example_2d/install/: local_setup.sh  setup.zsh
lidarslam_ros2-develop/ompl_example_2d_latest_6-20250408T040251Z-001/ompl_example_2d_latest_6/ompl_example_2d/src/: ompl_example_2d_node.cpp
octomap_server2_latest_2/install/: setup.bash  setup.ps1  setup.sh
octomap_server2_latest_2/install/octomap_server2/lib/octomap_server2/: load_octomap_node
octomap_server2_latest_2/log/: latest_build
octomap_server2_latest_2/octomap_server2/: CMakeLists.txt
octomap_server2_latest_2/octomap_server2/src/: load_octomap_node.cpp  octomap_analyzer.cpp  octomap_server.cpp
ompl_example_2d_latest_6/ompl_example_2d/: CMakeLists.txt
ompl_example_2d_latest_6/ompl_example_2d/install/: setup.ps1
ompl_example_2d_latest_6/ompl_example_2d/src/: ompl_example_2d.cpp
sjtu_drone-ros2/: .gitignore  README.md
sjtu_drone-ros2/gtpath_publisher/gtpath_publisher/: backup.py  gt_path.py
sjtu_drone-ros2/sjtu_drone_bringup/: setup.py
sjtu_drone-ros2/sjtu_drone_bringup/launch/: sjtu_drone_bringup.launch.py  sjtu_drone_gazebo.launch.py
sjtu_drone-ros2/sjtu_drone_bringup/rviz/: rviz.rviz  rviz2.rviz
sjtu_drone-ros2/sjtu_drone_bringup/sjtu_drone_bringup/: gt_path.py
sjtu_drone-ros2/sjtu_drone_control/install/: setup.bash  setup.zsh
sjtu_drone-ros2/sjtu_drone_control/log/: latest_build
sjtu_drone-ros2/sjtu_drone_control/sjtu_drone_control/: teleop_joystick.py
sjtu_drone-ros2/sjtu_drone_control/sjtu_drone_control/install/: setup.bash  setup.sh
sjtu_drone-ros2/sjtu_drone_control/sjtu_drone_control/log/: latest_build
sjtu_drone-ros2/sjtu_drone_description/urdf/: sjtu_drone.urdf.xacro
sjtu_drone-ros2/sjtu_drone_description/worlds/: biggerdhoka.world  dhoka.world  full50.world  green_playground.world
sjtu_drone_ros2/: abm_map_publisher.py  additional_sensors.txt  please_read.txt  test_circle.py
sjtu_drone_ros2/sjtu_drone_bringup/config/: drone.yaml
sjtu_drone_ros2/sjtu_drone_bringup/launch/: sjtu_drone_bringup.launch.py  sjtu_drone_gazebo.launch.py
sjtu_drone_ros2/sjtu_drone_bringup/rviz/: rviz2.rviz
sjtu_drone_ros2/sjtu_drone_bringup/sjtu_drone_bringup/: gt_path.py  mission_end.py  spawn_drone.py
sjtu_drone_ros2/sjtu_drone_control/install/: local_setup.sh  setup.sh
sjtu_drone_ros2/sjtu_drone_control/sjtu_drone_control/install/: local_setup.sh
sjtu_drone_ros2/sjtu_drone_description/include/sjtu_drone_description/: plugin_drone_private.h
sjtu_drone_ros2/sjtu_drone_description/urdf/: sjtu_drone.urdf  sjtu_drone.urdf.xacro
sjtu_drone_ros2/sjtu_drone_description/worlds/: coridor.world  green_playground2.world  green_playground3.world  green_playground5.world
(+33 files in other folders)
