<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gtpath_publisher</name>
  <version>0.0.0</version>
  <description>Package to publish path from pose messages</description>
  <maintainer email="shameermasroor@hotmail.com">shameer</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <build_depend>ament_python</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_cmake_ros</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
